--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
+    "postbuild": "ts-node src/copy-assets.ts",
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts"
   },
@@ -24,6 +25,7 @@
     "@types/lodash": "^4.14.202",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
+    "@types/shelljs": "^0.8.15",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -31,6 +33,7 @@
     "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
     "rimraf": "^5.0.5",
+    "shelljs": "^0.8.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
