--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint . --ext .ts"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed-users-gen.ts"
+    "seed": "ts-node prisma/seed-users-gen.ts",
+    "other-seed": "ts-node prisma/other-seed.ts"
   },
   "keywords": [],
   "author": "",
