--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
     "rimraf": "^5.0.5",
     "shelljs": "^0.8.5",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
