--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
     "@types/shelljs": "^0.8.15",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
