--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "postbuild": "ts-node src/copy-assets.ts",
@@ -39,6 +39,7 @@
     "rimraf": "^5.0.5",
     "shelljs": "^0.8.5",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
