--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.6",
     "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
     "rimraf": "^5.0.5",
