--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "uuid": "^9.0.1"
   }
 }
