limit request count in artillery yml

--- a/__load-testing__/artillery-load.yml
+++ b/__load-testing__/artillery-load.yml
@@ -36,3 +36,4 @@ scenarios:
               url: "/short/categorized"
           - get:
               url: "/category/packsAndShorts"
+        count: 20
