--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "fakerator": "^0.3.6",
     "https": "^1.0.0",
