--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "pino": "^9.0.0",
     "uuid": "^9.0.1"
   }
 }
