--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "pino": "^9.0.0",
+    "pino-pretty": "^11.0.0",
     "uuid": "^9.0.1"
   }
 }
