--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "jest-mock-extended": "^3.0.6",
     "nodemon": "^3.0.3",
     "prisma": "^5.10.2",
-    "rimraf": "^5.0.5",
     "shelljs": "^0.8.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
@@ -65,5 +64,6 @@
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0",
     "uuid": "^9.0.1"
+    "rimraf": "^5.0.5"
   }
 }
