--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
