--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "copy-views": "copyfiles -u 2 src/views/deleteAccount.ejs build/views/",
+    "build:dev": "rimraf ./build && tsc && npm run copy-views",
+    "build:prod": "tsc && npm run copy-views",
+    "start:dev": "NODE_ENV=DEVELOPMENT npx nodemon",
+    "start:prod": "NODE_ENV=PRODUCTION node build/index.js",
     "test": "jest",
-    "start:dev": "npx nodemon",
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts"
   },
   "prisma": {
